added buttons for question answers

--- a/index.html
+++ b/index.html
@@ -14,11 +14,28 @@
     </header>
 
     <body>
-        <h1>test 2</h1>
+        <main> 
+            <h1>Press "start" to begin the quiz</h1>
+            <section class="questions">
+                <ui>
+                    <li>
+                        <button class="button" id="btn1"></button>
+                    </li>
+                    <li>
+                        <button class="button" id="btn2"></button>
+                    </li>
+                    <li>
+                        <button class="button" id="btn3"></button>
+                    </li>
+                    <li>
+                        <button class="button" id="btn4"></button>
+                    </li>
+                </ui>
 
-
-
-
+            </section>
+            
+            
+        </main>
         <script src= "script.js"></script>
     </body>
 </html>
