--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Quiz Game</title>
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="/style.css">
     </head>
 
     <header>
@@ -14,11 +14,11 @@
     </header>
 
     <body>
+        <h1>Press "start" to begin the quiz</h1>
         <main> 
-            <h1>Press "start" to begin the quiz</h1>
             <section class="container">
                 <div id="question"></div>
-                <ui>
+                <ui id="answerChoices">
                     <li>
                         <button class="button" id="btn1"></button>
                     </li>
@@ -46,6 +46,6 @@
 
         </section>
 
-        <script src= "script.js"></script>
+        <script src= "/script.js"></script>
     </body>
 </html>
