need to work on more but I dont have a lot of time

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </main>
         <section>
             <div>
-                <p>time</p>
+                <p id= "timer">60</p>
             </div>
             <div>
                 <button id="startBtn">Start</button>
