--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
     <body>
         <main> 
+            <div id="quiz"></div>
+            <button id="submit">Submit Quiz</button>
+            <div id="results"></div>
             
         </main>
 
