--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
 
     <body>
         <main> 
-            <div id="quiz"></div>
-            <button id="submit">Submit Quiz</button>
-            <div id="results"></div>
+            <div class="quiz-container">
+                <div id="quiz"></div>
+              </div>
+              <button id="previous">Previous Question</button>
+              <button id="next">Next Question</button>
+              <button id="submit">Submit Quiz</button>
+              <div id="results"></div>
             
         </main>
 
