--- a/index.html
+++ b/index.html
@@ -5,23 +5,30 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Quiz Game</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="/style.css">
     </head>
 
     <header>
+        <h1>The Legend of Zelda: Breath of the Wild Quiz</h1> 
     </header>
 
     <body>
-        <main> 
+        <main>
             <div class="quiz-container">
                 <div id="quiz"></div>
             </div>
-              <button id="previous">Previous Question</button>
-              <button id="next">Next Question</button>
-              <button id="submit">Submit Quiz</button>
+              <button type="button" class="btn btn-outline-secondary" id="previous">Previous Question</button>
+              <button type="button" class="btn btn-outline-primary" id="next">Next Question</button>
+              <button type="button" class="btn btn-outline-success" id="submit">Submit Quiz</button>
               <div id="results"></div>
         </main>
 
+        <footer>
+            <p>created by alex</p>
+        </footer>
+        
         <script src= "/script.js"></script>
     </body>
+    
 </html>
